force-app/main/default/objects/Notification_Task__c/Notification_Task__c.object-meta.xml
<CustomObject>
    <label>Notification Task</label>
    <nameField>
        <label>Notification Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>