force-app/main/default/objects/Notification_Task__c/fields/Change_date__c.field-meta.xml
<CustomField>
    <fullName>Change_date__c</fullName>
    <formula>Notification_Group__r.Notification_Process__r.Change_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>