force-app/main/default/objects/Notification_Task__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Acceptance__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Comments</fullName>
            </value>
            <value>
                <fullName>No Comments</fullName>
            </value>
            <value>
                <fullName>No Feedback after 20 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>