force-app/main/default/objects/Notification_Task__c/fields/Customer_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance__c</fullName>
    <label>Customer Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>