force-app/main/default/objects/Notification_Task__c/fields/DeadlineForResponse__c.field-meta.xml
<CustomField>
    <fullName>DeadlineForResponse__c</fullName>
    <formula>Notification_Group__r.Notification_Process__r.Deadline_For_Response__c</formula>
    <label>Deadline For Response</label>
    <type>Date</type>
</CustomField>