force-app/main/default/objects/Notification_Task__c/fields/Notification_Account__c.field-meta.xml
<CustomField>
    <fullName>Notification_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Notification Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notification Tasks</relationshipLabel>
    <relationshipName>NotificationTasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>