force-app/main/default/objects/Notification_Task__c/fields/Type_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change__c</fullName>
    <formula>TEXT( Notification_Group__r.Notification_Process__r.Type_of_Change__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Change</label>
    <type>Text</type>
</CustomField>